This is the HISTORY file for Expect.  Modifications made by Cygnus
support are in ChangeLog. - Don

Date	Version	Description
-------	-------	------------------------------------------------------
4/1/99	5.30.0  Martin Forssen <maf@crt.se> provided fix to allow configure
		to start with LDFLAGS from environment.

		Paul Tazzyman <Paul.Tazzyman@one.at> noted that log_file didn't
		check for logging twice without turning off logging first.

		Ben <spy@calvin.iconoclasm.org> provided updated host for
		weather example.

		Jonathon Kamens noted that Expect didn't build properly if
		Tcl and/or Tk used build/install directories out of the usual
		hierarchy.  At the same time, I fixed a number of other related
		problems in Makefile/configure.

		Pierre Pomes <ppomes@it.marseille-innov.assoc.fr> provided fix
		to ftp-inband.  It blew up from an unprotected send that
		was handed a uuencoded line that started with a -.

		Autoexpect was thrown off by simple-minded [file executable]
		test picking up expect directory while searching for
		executable.

1/21/99 5.29.0	Martin Forssen provides mods to support INSTALL_ROOT.

		Bryan Surles <surles@scriptics.com> modified configure.in to
		map DBGX to the same value as TCL_DBGX so the .so is named
		correctly.

		Suresh Sastry <suresh@scriptics.com> forced $LIBS to be
		added to EXP_SHLIB_LD_LIBS.  It's not clear to me why this is
		necessary (since Tk doesn't) but he was having a problem
		with openpty not being found during runtime on Linux.

		Martin Forssen noted expectk was crashing if a Tcl error was
		encountered.  He found that exp_exit_handlers() was trying
		to write into interp->result after interp had been deleted.

		Added another copy to distribution site - with version number.

		Stanislav Shalunov <shalunov@mccme.ru> closed race in pty code.

		Fixed man page: -brace should be -nobrace.

		Dan O'Brien <dmobrien@lucent.com> noted that Expect needed to
		call Tcl_FindExecutable at startup for info nameofexecutable.
